@@ -1446,3 +1446,6 @@ ATS V1.5:
 
     HADOOP-12346. Increase some default timeouts / retries for S3a connector.
     (Sean Mackrory via Lei (Eddy) Xu)
+
+    HADOOP-12292. Make use of DeleteObjects optional.
+    (Thomas Demoor via stevel)
